added new tin dog website to portfolio section

--- a/index.html
+++ b/index.html
@@ -1055,6 +1055,39 @@
                     </div>
                   </div>
                 </li>
+                <li data-groups='["web","des"]'>
+                  <div class="inner">
+                    <img src="img/portfolio/dog.png" alt />
+
+                    <div class="overlay">
+                      <a href="#popup-7" class="view-project">
+                        View Project
+                      </a>
+
+                      <!--project popup-->
+                      <div
+                        id="popup-7"
+                        class="popup-box zoom-anim-dialog mfp-hide"
+                      >
+                        <figure>
+                          <!--project popup image-->
+                          <img src="img/portfolio/dog.png" alt />
+                        </figure>
+                        <div class="content">
+                          <!--project popup title-->
+                          <h4>
+                            <a href="dog_index.html">Tin Dog</a>
+                          </h4>
+
+                          <!--project popup description-->
+                          <!-- <p>
+																	Consul latine iudicabit eu vel. Cu has animal eruditi voluptatibus. Eu volumus explicari sed. Mel mutat vituperata suscipiantur et, et fabellas explicari adipiscing quo, no mucius euismod vis. Cu vim quem quod cibo.
+																</p> -->
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </li>
               </ul>
             </div>
           </div>
