--- a/index.html
+++ b/index.html
@@ -817,6 +817,36 @@
                     </div>
                   </div>
                 </li>
+                <li data-groups='["all","g"]'>
+                  <div class="inner">
+                    <a href="#jpopup-2" class="view-project">
+                      <img src="img/javascript/drum.png" alt />
+                    </a>
+
+                    <div
+                      id="jpopup-2"
+                      class="popup-box zoom-anim-dialog mfp-hide"
+                    >
+                      <figure>
+                        <!--project popup image-->
+                        <img src="img/javascript/drum.png" alt />
+                      </figure>
+                      <div class="content">
+                        <!--project popup title-->
+                        <h4>
+                          <a href="./drum_index.html">Drum Kit</a>
+                        </h4>
+
+                        <!--project popup description-->
+                        <p>
+                          You can play drum sounds by clicking on the keys
+                          mentioned
+                        </p>
+                      </div>
+                      <!--project popup-->
+                    </div>
+                  </div>
+                </li>
               </ul>
             </div>
           </div>
